--- a/index.html
+++ b/index.html
@@ -1,38 +1,11 @@
 <html>
 <header>
-  <h1>Main Page Title</h1>
+  <h1>Under Contruction</h1>
 </header>
 
 <body bgcolor="white">
 
-Welcome to the Alaska Fisheries Science Center application server.<br><br>
-The following applications were migrated from the old access.afsc.noaa.gov site to this server in 2021.  Please make sure to update any bookmarks you may have previously used.<br>
-If you are looking for an application that is not in this list, or would like more details, please visit the <a href="https://www.fisheries.noaa.gov/about/alaska-fisheries-science-center">NOAA Fisheries - Alaska Fisheries Science Center Site</a>.
 
-<br>
-<ul>
-	<li><a href="/pubs/search.php">AFSC Yearly Publications Poster Database</a></li>
-	<li><a href="/al/collection_details/collection_search.php">Aging Method Database</a></li>
-	<li><a href="/al/requests/requests.php">Aging Request Status</a></li>
-	<li><a href="/REFM/Stocks/SARA/sara_access.php">Alaska Species Stock Assessment Results Archive</a></li>
-	<li><a href="/sonarHabMap/search.php">Applicability of Sonars for Habitat Mapping Bibliography Database Search</a></li>
-	<li><a href="https://apps-afsc.fisheries.noaa.gov/ords/f?p=711">Data Collected by Groundfish Observers</a></li>
-	<li><a href="/icc/index.php">EcoFOCI Cruise Database </a></li>
-	<li><a href="/REFM/Socioeconomics/Projects/communities/profiles.php">Fishing Communities of Alaska</a></li>
-	<li><a href="/ichthyo/index.php">Ichthyoplankton Information System (IIS)</a></li>
-	<li><a href="rata.com/w/u8e2-aznk/?cur=eWgoXHUIXFj&amp;from=root">Interactive Research Locations Map</a></li>
-	<li><a href="/mfge/search.php">Mobile Fishing Gear Effects Bibliography Database</a></li>
-	<li><a href="/REFM/stocks/Historic_Assess.htm">North Pacific Groundfish Stock Assessment Archives</a></li>
-	<li><a href="/al/otolith_inventory/searchform.php">Otolith Collection Inventory</a></li>
-	<li><a href="/Publications/ProcRpts_intro.htm">Processed Reports</a></li>
-	<li><a href="/pubs/search.php">Publications Database Search</a></li>
-	<li><a href="/refm/reem/ecoweb/index.php">Resource Ecology and Ecosystem Modeling - Ecosystem Status Reports</a></li>
-	<li><a href="/refm/reem/webdietdata/diettableintro.php">Resource Ecology and Ecosystem Modeling - Groundfish Diet Composition Tables</a></li>
-	<li><a href="/refm/reem/webdietdata/dietdataintro.php">Resource Ecology and Ecosystem Modeling - Groundfish Diet Data</a></li>
-	<li><a href="/refm/reem/lhweb/index.php">Resource Ecology and Ecosystem Modeling - Life History Database</a></li>
-	<li><a href="/refm/reem/set/index.php">Resource Ecology and Ecosystem Modeling - Stomach Examiner's Tool</a></li>
-	<li><a href="/Publications/techmemos.htm">Tech Memos</a></li>
-</ul>
 
 
 
